Update lhospitals_rule.qmd some typos.

--- a/quarto/derivatives/lhospitals_rule.qmd
+++ b/quarto/derivatives/lhospitals_rule.qmd
@@ -35,7 +35,7 @@ This would yield:
 
 
 $$
-\lim_{x \rightarrow 0} \frac{\sin(x)}{x} = \lim_{x\rightarrow 0} \frac{x -\sin(\xi) x^2/2}{x} = \lim_{x\rightarrow 0} 1 + \sin(\xi) \cdot x/2 = 1.
+\lim_{x \rightarrow 0} \frac{\sin(x)}{x} = \lim_{x\rightarrow 0} \frac{x -\sin(\xi) x^2/2}{x} = \lim_{x\rightarrow 0} 1 - \sin(\xi) \cdot x/2 = 1.
 $$
 
 This is because we know $\sin(\xi) x/2$  has a limit of $0$, when $|\xi| \leq |x|$.
@@ -119,21 +119,21 @@ It too is of the indeterminate form $0/0$. The derivative of the top is $e^x + e
 
 
 $$
-\lim_{x \rightarrow 0} \frac{\cos(x)}{1 - x^2}
+\lim_{x \rightarrow 0} \frac{1-\cos(x)}{x^2}
 $$
 
 By L'Hospital's rule *if* this following limit exists, the two will be equal:
 
 
 $$
-\lim_{x \rightarrow 0} \frac{-\sin(x)}{-2x}.
+\lim_{x \rightarrow 0} \frac{\sin(x)}{2x}.
 $$
 
 But if we didn't guess the answer, we see that this new problem is *also* indeterminate of the form $0/0$. So, repeating the process, this new limit will exist and be equal to the following limit, should it exist:
 
 
 $$
-\lim_{x \rightarrow 0} \frac{-\cos(x)}{-2} = 1/2.
+\lim_{x \rightarrow 0} \frac{\cos(x)}{2} = 1/2.
 $$
 
 As $L = 1/2$ for this related limit, it must also be the limit of the original problem, by L'Hospital's rule.
@@ -235,7 +235,7 @@ limit(f(x)/g(x), x, a)
 ## Idea behind L'Hospital's rule
 
 
-A first proof of L'Hospital's rule takes advantage of Cauchy's [generalization](http://en.wikipedia.org/wiki/Mean_value_theorem#Cauchy.27s_mean_value_theorem) of the mean value theorem to two functions. Suppose $f(x)$ and $g(x)$ are continuous on $[c,b]$ and differentiable on $(c,b)$. On $(c,x)$, $c < x < b$ there exists a $\xi$ with $f'(\xi) \cdot (f(x) - f(c)) = g'(\xi) \cdot (g(x) - g(c))$. In our formulation, both $f(c)$ and $g(c)$ are zero, so we have, provided we know that $g(x)$ is non zero, that $f(x)/g(x) = f'(\xi)/g'(\xi)$ for some $\xi$, $c < \xi < c + x$. That the right-hand side has a limit as $x \rightarrow c+$ is true by the assumption that the limit of the ratio of the derivatives exists. (The $\xi$ part can be removed by considering it as a composition of a function going to $c$.) Thus the right limit of the ratio $f/g$ is known.
+A first proof of L'Hospital's rule takes advantage of Cauchy's [generalization](http://en.wikipedia.org/wiki/Mean_value_theorem#Cauchy.27s_mean_value_theorem) of the mean value theorem to two functions. Suppose $f(x)$ and $g(x)$ are continuous on $[c,b]$ and differentiable on $(c,b)$. On $(c,x)$, $c < x < b$ there exists a $\xi$ with $f'(\xi) \cdot (g(x) - g(c)) = g'(\xi) \cdot (f(x) - f(c))$. In our formulation, both $f(c)$ and $g(c)$ are zero, so we have, provided we know that $g(x)$ is non zero, that $f(x)/g(x) = f'(\xi)/g'(\xi)$ for some $\xi$, $c < \xi <  x$. That the right-hand side has a limit as $x \rightarrow c+$ is true by the assumption that the limit of the ratio of the derivatives exists. (The $\xi$ part can be removed by considering it as a composition of a function going to $c$.) Thus the right limit of the ratio $f/g$ is known.
 
 
 ---
@@ -259,7 +259,7 @@ function lhopitals_picture_graph(n)
     m = (f(b)-f(a)) /  (g(b)-g(a))
 
     ## get bounds
-    tl = (x) -> g(0) + m * (x - f(0))
+    tl = (x) -> f(0) + m * (x - g(0))
 
     lx = max(find_zero(x -> tl(x) - (-0.05), (-1000, 1000)), -0.6)
     rx = min(find_zero(x -> tl(x) - (0.25),  (-1000, 1000)), 0.2)
@@ -754,7 +754,7 @@ L = float(N(limit(f, 0)))
 numericq(L)
 ```
 
-##### Question
+###### Question
 
 
 Use  L'Hospital's rule  to find the limit
@@ -774,7 +774,7 @@ L = float(N(limit(log(x)/x, x=>oo)))
 numericq(L)
 ```
 
-##### Question
+###### Question
 
 
 Using  L'Hospital's rule, does
@@ -796,7 +796,7 @@ Consider $x^{\log(x)} = e^{\log(x)\log(x)}$.
 yesnoq(false)
 ```
 
-##### Question
+###### Question
 
 
 Using  L'Hospital's rule, find the limit of
@@ -813,7 +813,7 @@ $$
 #| hold: true
 #| echo: false
 choices = [
-"``e^{2/\\pi}``",
+"``e^{-2/\\pi}``",
 "``{2\\pi}``",
 "``1``",
 "``0``",
