--- a/quarto/derivatives/related_rates.qmd
+++ b/quarto/derivatives/related_rates.qmd
@@ -182,7 +182,7 @@ How can this relationship be summarized? Well, let's go back to what we know, th
 diff(A(t), t)
 ```
 
-This should be clear: the rate of change, $dA/dt$, is increasing linearly, hence the second derivative, $dA^2/dt^2$ would be constant, just as we saw for the average rate of change.
+This should be clear: the rate of change, $dA/dt$, is increasing linearly, hence the second derivative, $d^2A/dt^2$ would be constant, just as we saw for the average rate of change.
 
 
 So, for this problem, a constant rate of change in width and height leads to a linear rate of change in area, put otherwise, linear growth in both width and height leads to quadratic growth in area.
