--- a/quarto/derivatives/implicit_differentiation.qmd
+++ b/quarto/derivatives/implicit_differentiation.qmd
@@ -440,7 +440,7 @@ To visualize, we plot implicitly and notice that:
 
 
 ```{julia}
-K(x,y) = x^3 - y^3
+K(x,y) = x^3 - y^3 - 3
 implicit_plot(K,  xlims=(-3, 3), ylims=(-3, 3))
 ```
 
@@ -451,7 +451,7 @@ The same problem can be done symbolically. The steps are similar, though the las
 #| hold: true
 @syms x y u()
 
-eqn    = K(x,y) - 3
+eqn    = K(x,y)
 eqn1   = eqn(y => u(x))
 dydx   = solve(diff(eqn1,x), diff(u(x), x))[1]        # 1 solution
 d2ydx2 = solve(diff(eqn1, x, 2), diff(u(x),x, 2))[1]  # 1 solution
