Update related_rates.qmd some typos.

--- a/quarto/derivatives/related_rates.qmd
+++ b/quarto/derivatives/related_rates.qmd
@@ -3,7 +3,7 @@
 
 {{< include ../_common_code.qmd >}}
 
-This section uses these add-on packaages:
+This section uses these add-on packages:
 
 
 ```{julia}
@@ -254,7 +254,7 @@ ImageFile(:derivatives, imgfile, caption)
 Shadows are a staple of film noir. In the photo, suppose a man and a woman walk towards a street light. As they approach the light the length of their shadow changes.
 
 
-Suppose, we focus on the $5$ foot tall woman. Her shadow comes from a streetlight $15$ feet high. She is walking at $3$ feet per second towards the light. What is the rate of change of her shadow?
+Suppose, we focus on the $5$ foot tall woman. Her shadow comes from a streetlight $12$ feet high. She is walking at $3$ feet per second towards the light. What is the rate of change of her shadow?
 
 
 The setup for this problem involves drawing a right triangle with height $12$ and base given by the distance $x$ from the light the woman is *plus* the length $l$ of the shadow. There is a similar triangle formed by the woman's height with length $l$. Equating the ratios of the sided gives:
@@ -326,7 +326,7 @@ Substituting known values and identifying $\theta=\pi/4$ when the shadow length,
 
 
 $$
-\frac{dx}{dt} \cdot \tan(\pi/4) + 25 \cdot((4/2) \cdot \frac{-1}{20} = 0
+\frac{dx}{dt} \cdot \tan(\pi/4) + 25 \cdot(4/2) \cdot \frac{-1}{20} = 0
 $$
 
 This can be solved for the unknown: $dx/dt = 50/20$.
@@ -338,7 +338,7 @@ This can be solved for the unknown: $dx/dt = 50/20$.
 A batter hits a ball toward third base at $75$ ft/sec and runs toward first base at a rate of $24$ ft/sec. At what rate does the distance between the ball and the batter change when $2$ seconds have passed?
 
 
-We will answer this with `SymPy`. First we create some symbols for the movement of the ball towardsthird base, `b(t)`, the runner toward first base, `r(t)`, and the two velocities. We use symbolic functions for the movements, as we will be differentiating them in time:
+We will answer this with `SymPy`. First we create some symbols for the movement of the ball towards third base, `b(t)`, the runner toward first base, `r(t)`, and the two velocities. We use symbolic functions for the movements, as we will be differentiating them in time:
 
 
 ```{julia}
@@ -534,7 +534,7 @@ plot(dtheta₁, 0, v0/5)
 In the second case we have a different shape. The graph is not monotonic, and before the peak there is an inflection point.  Without thinking too hard, we can see that the greatest change in the angle is when it is just above the head ($t=2$ has $x(t)=100$).
 
 
-That these two graphs differ so, means that the player may be able to read if the ball is going to go over his or her head by paying attention to the how the ball is being tracked.
+That these two graphs differ so, means that the player may be able to read if the ball is going to go over his or her head by paying attention to how the ball is being tracked.
 
 
 ##### Example
@@ -586,7 +586,7 @@ $$
 \frac{dh}{dt} = \frac{h_0^2}{h^2} \cdot v = \frac{h_0^2}{h^2} \sqrt{2g(h-h_0)}.
 $$
 
-If $h >> h_0$, then $\sqrt{h-h_0} = \sqrt{h}\sqrt(1 - h_0/h) \approx \sqrt{h}(1 - (1/2)(h_0/h)) \approx \sqrt{h}$. So the rate of change of height in time is like $1/h^{3/2}$.
+If $h >> h_0$, then $\sqrt{h-h_0} = \sqrt{h}\sqrt{(1 - h_0/h)} \approx \sqrt{h}(1 - (1/2)(h_0/h)) \approx \sqrt{h}$. So the rate of change of height in time is like $1/h^{3/2}$.
 
 
 Now, by the chain rule, we have then the rate of change of volume with respect to time, $dV/dt$, is:
@@ -680,7 +680,7 @@ A pebble is thrown into a lake causing ripples to form expanding circles. Suppos
 # da/dt = pi * 2r * drdt
 r = 10; drdt = 1
 val = pi * 2r * drdt
-numericq(val, units=L"feet$^2$/second")
+numericq(val, units=L"feet^2/second")
 ```
 
 ###### Question
