Update ftc.qmd some typos.

--- a/quarto/integrals/ftc.qmd
+++ b/quarto/integrals/ftc.qmd
@@ -1,4 +1,4 @@
-# Fundamental Theorem or Calculus
+# Fundamental Theorem of Calculus
 
 
 {{< include ../_common_code.qmd >}}
@@ -90,7 +90,7 @@ Let's look first at the integral using the right-Riemann sum, again using $h=(b-
 
 
 $$
-\int_a^b f(u) du \approx f(a + 1h)h + f(a + 2h)h + \cdots f(a +nh)h = S(g)(n),
+\int_a^b f(u) du \approx f(a + 1h)h + f(a + 2h)h + \cdots + f(a +nh)h = S(g)(n),
 $$
 
 where we define $g(i) = f(a + ih)h$. In the above, $n$ relates to $b$, but we could have stopped accumulating at any value. The analog for $S(g)(k)$ would be $\int_a^x f(u) du$ where $x = a + kh$. That is we can make a function out of integration by considering the mapping $(x, \int_a^x f(u) du)$. This might be written as $F(x) = \int_a^x f(u)du$.  With this definition, can we take a derivative in $x$?
@@ -155,7 +155,7 @@ In Part 1, the integral $F(x) = \int_a^x f(u) du$ is defined for any Riemann int
 ## Using the fundamental theorem of calculus to evaluate definite integrals
 
 
-The major use of the FTC is the computation of $\int_a^b f(x) dx$. Rather then resort to Riemann sums or geometric arguments, there is an alternative - *when possible*, find a function $F$ with $F'(x) = f(x)$ and compute $F(b) - F(a)$.
+The major use of the FTC is the computation of $\int_a^b f(x) dx$. Rather than resort to Riemann sums or geometric arguments, there is an alternative - *when possible*, find a function $F$ with $F'(x) = f(x)$ and compute $F(b) - F(a)$.
 
 
 Some examples:
@@ -362,13 +362,13 @@ This statement is nothing more than the derivative formula $[cf(x) + dg(x)]' = c
 ##### Examples
 
 
-  * The antiderivative of the polynomial $p(x) = a_n x^n + \cdots a_1 x + a_0$ follows from the linearity of the integral and the general power rule:
+  * The antiderivative of the polynomial $p(x) = a_n x^n + \cdots + a_1 x + a_0$ follows from the linearity of the integral and the general power rule:
 
 
 
 \begin{align*}
-\int (a_n x^n + \cdots a_1 x + a_0) dx
-&= \int a_nx^n dx + \cdots \int a_1 x dx + \int a_0 dx                   \\
+\int (a_n x^n + \cdots + a_1 x + a_0) dx
+&= \int a_nx^n dx + \cdots + \int a_1 x dx + \int a_0 dx                   \\
 &= a_n \int x^n dx + \cdots +  a_1 \int x dx + a_0 \int dx                   \\
 &= a_n\frac{x^{n+1}}{n+1} + \cdots +  a_1 \frac{x^2}{2} +  a_0 \frac{x}{1}.
 \end{align*}
@@ -492,7 +492,7 @@ To see that the value of $a$ does not matter,  consider $a_0 < a_1$. Then we hav
 
 
 $$
-F(x) = \int_{a_0}^x f(u)du, \quad G(x) = \int_{a_0}^x f(u)du,
+F(x) = \int_{a_0}^x f(u)du, \quad G(x) = \int_{a_1}^x f(u)du,
 $$
 
 That $F(x) = G(x) + \int_{a_0}^{a_1} f(u) du$. The additional part may look complicated, but the point is that as far as $x$ is involved, it is a constant. Hence both $F$ and $G$ are antiderivatives if either one is.
@@ -583,7 +583,7 @@ The answer will either be at a critical point, at $0$ or as $x$ goes to $\infty$
 
 
 $$
-[\text{erf}(x)] = \frac{2}{\pi}e^{-x^2}.
+[\text{erf}(x)]' = \frac{2}{\pi}e^{-x^2}.
 $$
 
 Oh, this is never $0$, so there are no critical points. The maximum occurs at $0$ or as $x$ goes to $\infty$. Clearly at $0$, we have $\text{erf}(0)=0$, so the answer will be as $x$ goes to $\infty$.
@@ -638,7 +638,7 @@ The first value being positive says there is a relative minimum at $-0.924139$, 
 Returning to probability, suppose there are $n$ positive random numbers $X_1$, $X_2$, ..., $X_n$. A natural question might be to ask what formulas describes the largest of these values, assuming each is identical in some way. A description that is helpful is to define $F(a) = P(X \leq a)$ for some random number $X$. That is the probability that $X$ is less than or equal to $a$ is $F(a)$. For many situations, there is a *density* function, $f$, for which $F(a) = \int_0^a f(x) dx$.
 
 
-Under assumptions that the $X$ are identical and independent, the largest value, $M$, may b characterized by $P(M \leq a) = \left[F(a)\right]^n$. Using $f$ and $F$ describe the derivative of this expression.
+Under assumptions that the $X$ are identical and independent, the largest value, $M$, may be characterized by $P(M \leq a) = \left[F(a)\right]^n$. Using $f$ and $F$ describe the derivative of this expression.
 
 
 This problem is constructed to take advantage of the FTC, and we have:
@@ -723,7 +723,7 @@ So the answer is the same. Newton's method converged in 3 steps, and called `h` 
 Assuming the number inside `Core.Box` is the value of `ctr`, we see not so many function calls, just $48$.
 
 
-Were `f` very expensive to compute or `h` expensive to compute (which can happen if, say, `f` were highly oscillatory) then steps could be made to cut this number down, such as evaluating $F(x_n) = \int_{x_0}^{x_n} f(x) dx$, using linearity, as $\int_0^{x_0} f(x) dx + \int_{x_0}^{x_1}f(x)dx + \int_{x_1}^{x_2}f(x)dx + \cdots + \int_{x_{n-1}}^{x_n}f(x)dx$. Then all but the last term could be stored from the previous steps of Newton's method. The last term presumably being less costly as it would typically involve a small interval.
+Were `f` very expensive to compute or `h` expensive to compute (which can happen if, say, `f` were highly oscillatory) then steps could be made to cut this number down, such as evaluating $F(x_n) = \int_{0}^{x_n} f(x) dx$, using linearity, as $\int_0^{x_0} f(x) dx + \int_{x_0}^{x_1}f(x)dx + \int_{x_1}^{x_2}f(x)dx + \cdots + \int_{x_{n-1}}^{x_n}f(x)dx$. Then all but the last term could be stored from the previous steps of Newton's method. The last term presumably being less costly as it would typically involve a small interval.
 
 
 :::{.callout-note}
